--- a/Exercícios/ex022/fundo001.html
+++ b/Exercícios/ex022/fundo001.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de imagem de fundo</title>
-    <link rel="stylesheet" href="style.css">
+   <style>
+    div.quadrado {
+    border-color: 1.2px solid black;
+    width: 300px;
+    height: 300px;
+}
+   </style>
 </head>
 
 <body>
