--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -14,6 +14,38 @@
         <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus similique eos laboriosam aut
             necessitatibus incidunt in omnis molestias sapiente accusantium harum cupiditate consectetur voluptatem,
             optio illo, nulla nemo perferendis sed.</P>
+            <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus similique eos laboriosam aut
+            necessitatibus incidunt in omnis molestias sapiente accusantium harum cupiditate consectetur voluptatem,
+            optio illo, nulla nemo perferendis sed.
+        </P>
+        <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus similique eos laboriosam aut
+            necessitatibus incidunt in omnis molestias sapiente accusantium harum cupiditate consectetur voluptatem,
+            optio illo, nulla nemo perferendis sed.
+        </P>
+        <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus similique eos laboriosam aut
+            necessitatibus incidunt in omnis molestias sapiente accusantium harum cupiditate consectetur voluptatem,
+            optio illo, nulla nemo perferendis sed.</P>
+            <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus similique eos laboriosam aut
+            necessitatibus incidunt in omnis molestias sapiente accusantium harum cupiditate consectetur voluptatem,
+            optio illo, nulla nemo perferendis sed.
+        </P>
+        <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus similique eos laboriosam aut
+            necessitatibus incidunt in omnis molestias sapiente accusantium harum cupiditate consectetur voluptatem,
+            optio illo, nulla nemo perferendis sed.
+        </P>
+        <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus similique eos laboriosam aut
+            necessitatibus incidunt in omnis molestias sapiente accusantium harum cupiditate consectetur voluptatem,
+            optio illo, nulla nemo perferendis sed.</P>
+            <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus similique eos laboriosam aut
+            necessitatibus incidunt in omnis molestias sapiente accusantium harum cupiditate consectetur voluptatem,
+            optio illo, nulla nemo perferendis sed.
+        </P>
+        <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus similique eos laboriosam aut
+            necessitatibus incidunt in omnis molestias sapiente accusantium harum cupiditate consectetur voluptatem,
+            optio illo, nulla nemo perferendis sed.
+        </P>
+        
+
     </main>
 </body>
 
