--- a/Exercícios/ex023/tabela02.html
+++ b/Exercícios/ex023/tabela02.html
@@ -6,25 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
     <style>
-        body{
+        body {
             font-family: Arial, Helvetica, sans-serif;
+            background-image: linear-gradient(to right, yellow, blue, green);
+
         }
-        table{
+
+        caption {
+            font-size: 1.5em;
+            font-weight: bolder;
+            background-color: lightgray;
+        }
+
+        table {
             width: 400px;
             border-collapse: collapse;
         }
-        th{
+
+        th {
             border: 1px solid black;
             background-color: rgba(128, 128, 128, 0.412);
             color: white;
             text-align: center;
             padding: 1.8px;
         }
-        td{
+
+        td {
             border: 1px solid black;
             text-align: center;
         }
-        tfoot{
+
+        tfoot {
             border: 1px solid black;
             background-color: rgb(128, 128, 128);
             color: white;
@@ -50,10 +62,11 @@
     -->
     <table>
         <thead>
+            <caption>População das Unidades Federativas do Brasil</caption>
             <tr>
-                <th>Ranque</th>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Ranque</th>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
             </tr>
         </thead>
 
@@ -64,11 +77,11 @@
             <td>45 973 190</td>
         </tr>
         <tfoot>
-            <td>01</td>
-            <td>Total de Habitantes</td>
+            <th cope="row"">01</th>
+            <th scope=" row">Total de Habitantes</th>
             <td>00 000 000</td>
         </tfoot>
     </table>
 </body>
-     
+
 </html>
