--- a/Exercícios/ex024/iframe002.html
+++ b/Exercícios/ex024/iframe002.html
@@ -25,7 +25,7 @@
         dolor quod nesciunt, qui tempore, ea hic fugit earum voluptas vel provident voluptatibus dolorem cupiditate id
         quibusdam.</p>
 
-        <iframe src="pagina001.html" frameborder="0" height="525" width="500"></iframe>
+        <iframe src="paginas-extras/pagina001.html" frameborder="0" height="525" width="500"></iframe>
 
         <p>Infelizmente o seu navegador não é compatível!</p>
 
