--- a/Exercícios/ex026/mq002/index.html
+++ b/Exercícios/ex026/mq002/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estiolos/retrato.css" media="screen end (orientation:portrait)">
+    <link rel="stylesheet" href="estilos/paisagem.css" media="screen end (orientation:landscape)">
 </head>
 
 <body>
